删除已于JDK1.9中删除的sun.misc.BASE64Encoder，改为使用JDK API 中的java.util.Base64.Encoder实现Base64编码