@@ -1,9 +1,8 @@
 package yankunwei.utils;
 
-import sun.misc.BASE64Encoder;
-
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 public class MD5Tool {
     public static String MD5Encrypt(String message) {
@@ -13,8 +12,8 @@ public class MD5Tool {
         try {
             messageDigest = MessageDigest.getInstance("MD5");
             byte[] newMessageByte = messageDigest.digest(oldMessageBytes);
-            BASE64Encoder encoder = new BASE64Encoder();
-            MD5password = encoder.encode(newMessageByte);
+            Base64.Encoder encoder = Base64.getEncoder();
+            MD5password = encoder.encodeToString(newMessageByte);
         } catch (NoSuchAlgorithmException e) {
             e.printStackTrace();
         }
